crates/gpui-form-derive/src/derives/snapshots/gpui_form_derive__derives__component_shape_state__tests__component_shape_derive_infers_generic_component_type.snap
---
source: crates/gpui-form-derive/src/derives/component_shape_state.rs
expression: pretty_tokens(expanded)
---
impl<T, D> ::gpui_form_runtime::shape::ComponentShape for Picker<T, D> {
    type State = crate::state::PickerState<T, D>;
    fn new(
        window: &mut ::gpui::Window,
        cx: &mut ::gpui::Context<'_, Self::State>,
    ) -> Self::State {
        <crate::state::PickerState<T, D>>::new(window, cx)
    }
    type ValueStoragePolicy = ::gpui_form_runtime::shape::RequiredValueStorage;
    type ValueBindingPolicy = ::gpui_form_runtime::shape::NoComponentValueBinding;
    const COMPONENT_TYPE: Option<&'static str> = Some(
        concat!(module_path!(), "::", stringify!(Picker < _, _ >)),
    );
}
impl<T, D> Picker<T, D> {}
impl<T, D> ::gpui_form_runtime::shape::DeclaredComponentShape for Picker<T, D> {}
