crates/gpui-form-derive/src/derives/snapshots/gpui_form_derive__derives__component_shape_state__tests__component_shape_derive_on_component_with_state.snap
---
source: crates/gpui-form-derive/src/derives/component_shape_state.rs
expression: pretty_tokens(expanded)
---
impl ::gpui_form_runtime::shape::ComponentShape for TagsInput {
    type State = crate::state::TagsState;
    fn new(
        window: &mut ::gpui::Window,
        cx: &mut ::gpui::Context<'_, Self::State>,
    ) -> Self::State {
        <crate::state::TagsState>::new(window, cx)
    }
    type ValueStoragePolicy = ::gpui_form_runtime::shape::RequiredValueStorage;
    type ValueBindingPolicy = ::gpui_form_runtime::shape::NoComponentValueBinding;
    const PROTOTYPING: ::gpui_form_runtime::shape::ComponentPrototyping = ::gpui_form_runtime::shape::ComponentPrototyping::new()
        .field_suffix("tags");
    const COMPONENT_TYPE: Option<&'static str> = Some(
        concat!(module_path!(), "::", stringify!(TagsInput)),
    );
}
