crates/gpui-form-derive/src/derives/snapshots/gpui_form_derive__derives__component_shape_state__tests__component_shape_with_component_type.snap
---
source: crates/gpui-form-derive/src/derives/component_shape_state.rs
expression: pretty_tokens(expanded)
---
impl ::gpui_form_runtime::shape::ComponentShape for TagsInput {
    type State = crate::state::TagsState;
    fn new(
        window: &mut ::gpui::Window,
        cx: &mut ::gpui::Context<'_, Self::State>,
    ) -> Self::State {
        (crate::state::TagsState::new)(window, cx)
    }
    type ValueStoragePolicy = ::gpui_form_runtime::shape::RequiredValueStorage;
    type ValueBindingPolicy = ::gpui_form_runtime::shape::NoComponentValueBinding;
    type RenderComponent = __TagsInputRenderComponent;
}
#[doc(hidden)]
struct __TagsInputRenderComponent(::core::marker::PhantomData<fn() -> ()>);
impl ::gpui_form_runtime::shape::ComponentRender<crate::state::TagsState>
for __TagsInputRenderComponent {
    const RENDERS: bool = true;
    fn new(
        entity: &::gpui::Entity<crate::state::TagsState>,
    ) -> impl ::gpui::IntoElement {
        <crate::ui::TagsInput>::new(entity)
    }
}
impl ::gpui_form_runtime::shape::DeclaredComponentShape for TagsInput {}
