crates/gpui-form-derive/src/derives/snapshots/gpui_form_derive__derives__component_shape_state__tests__component_shape_with_value_storage_policy.snap
---
source: crates/gpui-form-derive/src/derives/component_shape_state.rs
expression: pretty_tokens(expanded)
---
impl ::gpui_form_runtime::shape::ComponentShape for SwitchInput {
    type State = crate::state::SwitchState;
    fn new(
        window: &mut ::gpui::Window,
        cx: &mut ::gpui::Context<'_, Self::State>,
    ) -> Self::State {
        <crate::state::SwitchState>::new(window, cx)
    }
    type ValueStoragePolicy = ::gpui_form_runtime::shape::DirectValueStorage;
    type ValueBindingPolicy = ::gpui_form_runtime::shape::NoComponentValueBinding;
    type RenderComponent = __SwitchInputRenderComponent;
}
#[doc(hidden)]
struct __SwitchInputRenderComponent(::core::marker::PhantomData<fn() -> ()>);
impl ::gpui_form_runtime::shape::ComponentRender<crate::state::SwitchState>
for __SwitchInputRenderComponent {
    const RENDERS: bool = true;
    fn new(
        entity: &::gpui::Entity<crate::state::SwitchState>,
    ) -> impl ::gpui::IntoElement {
        <SwitchInput>::new(entity)
    }
}
impl ::gpui_form_runtime::shape::DeclaredComponentShape for SwitchInput {}
